# Finmarket

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  test_client.py
finmarket/: __init__.py  client.py  models.py
