[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finmarket"
version = "1.1.0"
description = "Librería para obtener datos financieros de Finmarket Live"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Finmarket"}
]
keywords = ["finanzas", "mercado", "chile", "acciones", "bolsa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/finmarket/finmarket-python"
Documentation = "https://github.com/finmarket/finmarket-python#readme"
Repository = "https://github.com/finmarket/finmarket-python"
Issues = "https://github.com/finmarket/finmarket-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["finmarket*"]
